language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/return_with_borrowed_loc_resource_invalid.move
module M {
    resource struct X { u: u64 }

    fun t() {
        let s = X { u: 0 };
        let u = &s.u;
        copy u;
    }
}

// check: RET_UNSAFE_TO_DESTROY_ERROR
